Added null checks + corrected grammar